--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@ai-sdk/xai": "^1.0.11",
+    "@ai-sdk/openai": "^1.0.14",
     "@clerk/nextjs": "^6.9.3",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -19,6 +19,8 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@radix-ui/react-visually-hidden": "^1.1.1",
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.34.3",
     "ai": "^4.0.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
